index, compra, style

--- a/src/app/style.css
+++ b/src/app/style.css
@@ -1,3 +1,147 @@
-body{
-    background-color:red;
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+.grid-row-vista-productos{
+    display: grid;
+    grid-template-columns: 60% 40%;
+    grid-template-rows: 1fr;
+    margin: 50px;
+}
+.grid-column-productos{
+    display: grid;
+    grid-template-columns: 15% 85%;
+    grid-template-rows: 1fr;
+}
+
+.grid-item-pequeño{
+    text-align: center;
+}
+
+.grid-item-pequeño > img{
+    width: 100px;
+    margin-bottom: 50px;
+}
+.grid-column-item{
+    text-align: right;
+}
+.gird-item-grande > img{
+    width: 700px;
+    height: 750px;
+    object-fit: cover;
+}
+
+.grid-column-detalle{
+    background-color: rgb(255, 255, 255);
+    padding: 30px 50px;
+}
+
+.nombre-producto > h1{
+    font-size: 50px;
+    font-weight: 900;
+}
+
+.precio > p{
+margin: 30px 0;
+ font-size: 20px;
+ font-weight: 900
+}
+
+.tallas > p{
+    margin: 30px 0;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.lista-tallas{
+    display: flex;
+    list-style: none;
+}
+
+.lista-tallas > li{
+    margin: 0 10px;
+    font-size: 20px;
+}
+
+.btn1,
+.btn2{
+    width: 80%;
+    height: 50px;
+    margin: 5px 0;
+    font-size: 20px;
+    font-weight: 900;
+    color: #fff;
+    border-radius: 5px;
+}
+
+.btn1{
+    background-color: rgb(0, 0, 0);
+}
+.btn2{
+    background-color: rgb(13, 104, 223);
+}
+
+.contenedor-galeria-productos > h2{
+    font-size: 60px;
+    font-weight: 900;
+    text-align: center;
+    padding: 50px 0;
+}
+
+.grid-row-productos{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr;
+    gap: 50px;
+    padding: 0 100px;
+}
+
+.imagen-producto > img{
+    width: 100%;
+}
+
+.descripcion-producto{
+    padding: 10px 0;
+}
+
+.nombre-producto,
+.precio-producto{
+    font-size: 25px;
+    font-weight: 700;
+    text-align: center;
+}
+
+.formulario-compra {
+    margin:50px;
+}
+
+.pie-pagina {
+    position:relative;
+    width: 99vw;
+    height: 45vh;
+    left: 0px;
+    bottom:0px;
+    background-color: black;
+}
+
+.pie-pagina .img1 {
+    width: 99vw;
+    height: 40vh;
+
+}
+
+.pie-pagina .img2 {
+    left: 629px;
+    top: 216px;
+
+}
+.pie-pagina .img3 {
+    left: 718px;
+    top: 216px;
+
+}
+
+.grid-item-pequeño:hover{
+    transform: scale(1.03);
 }
