--- a/src/app/style.css
+++ b/src/app/style.css
@@ -59,7 +59,8 @@ margin: 30px 0;
     list-style: none;
 }
 
-.lista-tallas > li{
+
+.lista-tallas > a{
     margin: 0 10px;
     font-size: 20px;
 }
